overcorrection corrections from reviewer - radius, width, gap, padding, and too much grid declarations

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -6,10 +6,10 @@
   height: 413px;
   object-fit: cover;
   display: block;
-  border-radius: 10px;
+  border-radius: 8px;
 }
 .card__footer {
-  padding: 12px 0;
+  padding: 12px 0 0;
   display: grid;
   grid-template-columns: 1fr auto;
   gap: 20px;
@@ -26,7 +26,7 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
-  max-width: 220px;
+  max-width: 350px;
 }
 .card__like-button {
   width: 21px;
@@ -47,5 +47,9 @@
 @media screen and (max-width: 672px) {
   .card__image {
     height: 282px;
+  }
+  .card__title {
+    font-size: 16px;
+    max-width: 250px;
   }
 }
