--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -6,7 +6,7 @@
 .cards__list {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(413px, 1fr));
-  gap: 20px;
+  gap: 40px 20px;
   list-style: none;
   padding: 0;
   margin: 0;
@@ -14,11 +14,11 @@
 }
 @media screen and (max-width: 630px) {
   .cards {
-    padding: 34px 16px 40px 16px;
+    padding: 20px 0;
   }
 
   .cards__list {
-    grid-template-columns: 1fr;
-    padding: 0;
+    grid-template-columns: repeat(auto-fit, 288px);
+    row-gap: 20px;
   }
 }
