--- a/blocks/content.css
+++ b/blocks/content.css
@@ -1,10 +1,7 @@
 .content {
   max-width: 1280px;
-  width: 100%;
   margin: 0 auto;
   padding: 0 20px;
-  grid-template-rows: auto auto;
-  gap: 47px;
 }
 
 @media screen and (max-width: 630px) {
