--- a/blocks/page.css
+++ b/blocks/page.css
@@ -3,10 +3,4 @@
   font-family: "Poppins", Arial, Helvetica, sans-serif;
   color: #212121;
   min-height: 100vh;
-  display: grid;
-  grid-template-rows: auto 1fr auto;
-  grid-template-areas:
-    "header"
-    "main"
-    "footer";
 }
