--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -1,5 +1,5 @@
 .profile {
-  padding: 40px 0 20px 0;
+  padding: 34px 0 20px;
   display: flex;
   gap: 20px;
   align-items: center;
@@ -36,6 +36,7 @@
 
 .profile__description {
   font-size: 16px;
+  font-weight: 500;
   line-height: 1;
   margin: 12px 0 0;
   text-overflow: ellipsis;
@@ -96,15 +97,14 @@
 /* Mobile View */
 @media screen and (max-width: 630px) {
   .profile {
-    grid-template-columns: 1fr;
-    grid-template-rows: auto auto auto;
-    justify-items: center;
-    padding: 40px 16px 36px 16px;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px 0;
   }
 
   .profile__avatar {
-    width: 120px;
-    height: 120px;
+    width: 80px;
+    height: 80px;
   }
 
   .profile__info {
@@ -113,7 +113,7 @@
   }
 
   .profile__name {
-    font-size: 32px;
+    font-size: 20px;
   }
 
   .profile__description {
